BRIL-124 Upgrade to Spring Boot 2.7.14 and Gradle 8.