@@ -1,6 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.14'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'org.springframework.boot' version '2.7.14' 
+	id 'io.spring.dependency-management' version '1.1.2'
 	id 'java'
 }
 
@@ -8,17 +8,13 @@ group = 'com.brill.server'
 version = '1.0.0'
 
 // The versions of Java currently supported are 11 to 17.
-// We therefore need to maintain source compatibility with the lowest version. i.e. 11
+// Note that the Gradle for Java VS Code plug-in is hardcoded to use 11.
+// This prevents us from upgrading to Spring Boot 3.2.4
+// See https://github.com/redhat-developer/vscode-java/issues/3136
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_11
+	targetCompatibility = JavaVersion.VERSION_17 
 }
-
-// tasks.withType(JavaCompile) {
-//     options.compilerArgs += '--enable-preview'
-// }
-// tasks.withType(Test) {
-//     jvmArgs += "--enable-preview"
-// }
 
 configurations {
 	developmentOnly
@@ -88,6 +84,7 @@ test {
 }
 
 task copyWebApp(type: Copy) {
+	dependsOn(clean)
 	from '../brill_client/build'
   	into 'src/main/resources/static/.'
 }
